@@ -2,6 +2,9 @@
 
   * Added requestTime environment variable.
 
+  * Added manual chapters on serving static files, rewriting URL's, and gzip
+    compression.
+
 = 0.5.3 / 2011-09-20
 
   * Removed multipart.File#unlink
